# AntropomorphicManipulator_FK_IK

./: CMakeLists.txt  package.xml  setup.py
doc/: ARM Kinematics - FK and IK.ipynb
launch/: start_elipsoidal_motion.launch
scripts/: antropomorphic_end_effector_mover.py  antropomorphic_homogeneous.py  fk_antropomorphic_arm.py
src/antropomorphic_project/: elipsoidal_motion.py  ik_antropomorphic_arm.py  move.py  rviz_marker.py
